# efficient-nlp

./: .gitignore  README.md  bert-large-finetune.py  bert-large-uncased.json  bert_finetune.py  collaboration_hf.py  collaboration_test.py  data_processor.py  deepspeed_cfg.json  distilbert-base-uncased.json  docker_build.sh  eval.py  fake_test.py  glue_test.py  gpt2-finetune.py  hostfile  index.md  meta.yaml  op_parser.py  run_glue_bert_finetune.sh  run_glue_bert_large_finetune.sh  run_glue_finetune.sh  run_glue_test.sh  setup.cfg  setup.sh  slurm_batch.sh  test.py  utils.py
BERT_features/: feature_training.py
collaborative_system/: collaboration_cv.py  g_layer_lm.py  temperature_scaling_cv.py  temperature_scaling_gpt2.py  temperature_scaling_lm.py  temperature_scaling_vit.py
config/: client.cfg  coordinator.cfg  server.cfg
docker/: Dockerfile  environment.yml
docker/coordinator/: Dockerfile  requirements.txt
ecosys/: network_attached_model.py
ecosys/algo/: calibratiuon.py  monte_carlo.py
ecosys/context/: arg_parser.py  cfg_parser.py  logger.py  srv_ctx.py
ecosys/decorators/: concurrent.py  eval.py  eval_decorators.py  profile.py
ecosys/models/: g_layers.py  loader.py  temperature_scaling.py
ecosys/protos/: ecosys.proto
ecosys/resource/: energy.py
ecosys/service/: coordinator.py  (+2 more)
examples/: client.cfg  client.py  client_bk.py  coord.py  monitor.py  network_attached_model.py  server.cfg  server.py
protos/: ecosys.proto
service/: coordinator.cfg  coordinator.py
sql/: confidence.sql  coordinator.sql
tests/: temerature_scaling_test.py
(+35 files in other folders)
