[metadata]
name = ecosys
version = 0.0.1
author = Leyang Xue 
author_email = leyang.xue@ed.ac.uk
description = Energy-efficient Collaboration System for Giant Model Inference
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drunkcoding/efficient-nlp
project_urls =
    Bug Tracker =https://github.com/drunkcoding/efficient-nlp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ecosys
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ecosys